k8s/k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pablolovers   # <- Reemplaza con el namespace que quieras usar

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proyecto
  namespace: pablolovers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proyecto
  template:
    metadata:
      labels:
        app: proyecto
    spec:
      containers:
        - name: proyecto
          image: process:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: proyecto
  namespace: pablolovers
spec:
  selector:
    app: proyecto
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proyecto
  namespace: pablolovers
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: process.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proyecto
                port:
                  number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: pablolovers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.4
          ports:
            - containerPort: 3306
          readinessProbe:
            exec:
              command: ["bash","-lc","mysqladmin ping -proot" ]
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: pablolovers
spec:
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
